--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,14 @@ logging.level.org.hibernate=ERROR
 logging.level.ru.academits=DEBUG
 logging.level.ru.academits.test=INFO
 debug=false
+
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/phonebook?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Hibernate
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = update
