--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ debug=false
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/phonebook?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=500726
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Hibernate
